--- a/la marque la plus vendue/index.html
+++ b/la marque la plus vendue/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Répartition des ventes pour chaque marque en fonction du prix et de la puissance</title>
+  <title>la marque la plus vendue</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
