--- a/Répartition des ventes pour chaque marque en fonction du prix et de la puissance/index.html
+++ b/Répartition des ventes pour chaque marque en fonction du prix et de la puissance/index.html
@@ -20,6 +20,8 @@
       display: inline-table!important;
       top: 5px!important;
       left: 0px!important;
+      width: 703px;
+      position: fixed!important;
     }
   </style>
   <div class="sidebar-overlay"></div>
