--- a/index.html
+++ b/index.html
@@ -102,9 +102,8 @@ body {
     <!-- Sidebar Constructor -->
     <div class="constructor">
         <h2>Realisé par: </h2>
-        <h1> Abdelaziz ELOUAHAB</h1>
-        <h1> Karim LAARICH</h1>
-
+        <h1><a href="https://github.com/MrAbdelaziz" target="_blank"> Abdelaziz ELOUAHAB</a></h1>
+        <h1><a href="https://github.com/data-creator" target="_blank"> Karim LAARICH</a></h1>
     </div>
 </div>
 <!-- partial -->
