update svg padding

--- a/Répartition des ventes pour chaque marque en fonction du prix et de la puissance/index.html
+++ b/Répartition des ventes pour chaque marque en fonction du prix et de la puissance/index.html
@@ -23,6 +23,10 @@
       width: 703px;
       position: fixed!important;
     }
+
+    .tooltip svg{
+      padding: 0px !important;
+    }
   </style>
   <div class="sidebar-overlay"></div>
 
