--- a/Répartition des ventes pour chaque marque en fonction du prix et de la puissance/index.html
+++ b/Répartition des ventes pour chaque marque en fonction du prix et de la puissance/index.html
@@ -69,6 +69,13 @@
   </aside>
 
   <div class="wrapper">
+
+    <div class="loader-block">
+      <div class="loading">
+        <div class="bounceball"></div>
+        <div class="loading-text">PAGE LOADING..</div>
+      </div>
+    </div>
     <!-- Sidebar Constructor -->
     <div class="constructor">
 
